syntax = "proto3";

import "google/protobuf/empty.proto";

package guru.qa.grpc.rococo;

option java_multiple_files = true;
option java_package = "guru.qa.grpc.rococo";
option java_outer_classname = "RococoArtistProto";

service RococoArtistService {
  rpc GetArtist (ArtistRequest) returns (ArtistResponse);
  rpc GetAllArtists(AllArtistRequest) returns (AllArtistsResponse);
  rpc AddArtist(AddArtistRequest) returns (ArtistResponse);
  rpc EditArtist(EditArtistRequest) returns (ArtistResponse);
  rpc GetArtistById(ArtistsIdRequest) returns (AllArtistByIdsResponse);
}

message ArtistRequest {
  bytes id = 1;
}

message ArtistResponse {
  bytes id = 1;
  string name = 2;
  string biography = 3;
  bytes photo = 4;
}

message AllArtistRequest {
  string name = 1;
  int32 page = 2;
  int32 size = 3;
}

message AllArtistsResponse {
  repeated ArtistResponse artists = 1;
  int32 artists_count = 2;
}

message AddArtistRequest {
  string name = 1;
  string biography = 2;
  bytes photo = 3;
}

message EditArtistRequest {
  bytes id = 1;
  AddArtistRequest artistData = 2;
}

message ArtistsIdRequest {
  repeated bytes id = 1;
}

message AllArtistByIdsResponse {
  repeated ArtistResponse artist = 1;
}